--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==0.5.0
 aniso8601==7.0.0
 async-exit-stack==1.0.1
 async-generator==1.10
+autopep8==1.5.4
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -19,6 +20,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 orjson==3.4.6
 promise==2.3
+pycodestyle==2.6.0
 pydantic==1.7.3
 python-dotenv==0.15.0
 python-multipart==0.0.5
@@ -27,6 +29,7 @@ requests==2.25.1
 Rx==1.6.1
 six==1.15.0
 starlette==0.13.6
+toml==0.10.2
 ujson==3.2.0
 urllib3==1.26.2
 uvicorn==0.13.3
